--- a/NOVA/Views/IK/PersonelBilgi.cshtml
+++ b/NOVA/Views/IK/PersonelBilgi.cshtml
@@ -10,6 +10,11 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>PersonelBilgi</title>
+    <style>
+        body {
+            padding: 0 0 0 3rem !important;
+        }
+    </style>
 </head>
 <body onclose="close()">
     <div class="container-fluid flex-grow-1 container-p-y">
