--- a/NOVA/Views/IK/PersonelBilgiYonetim.cshtml
+++ b/NOVA/Views/IK/PersonelBilgiYonetim.cshtml
@@ -14,8 +14,9 @@
 
     <style>
         .no-records-found {
-            display:none;
+            display: none;
         }
+
         .th-inner {
             padding: 0.75rem;
             vertical-align: bottom;
@@ -23,8 +24,14 @@
             text-overflow: ellipsis;
             white-space: normal !important;
         }
-        .td{
-            white-space:nowrap !important;
+
+        .td {
+            white-space: nowrap !important;
+        }
+    </style>
+    <style>
+        body {
+            padding: 0 0 0 3rem !important;
         }
     </style>
 </head>
