--- a/NOVA/Views/IK/PersonelPuantaj.cshtml
+++ b/NOVA/Views/IK/PersonelPuantaj.cshtml
@@ -13,8 +13,13 @@
     <script src="~/Scripts/jquery-3.6.4.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <style>
-        .isimsiz{
-            border-color:red !important;
+        body {
+            padding: 0 0 0 3rem !important;
+        }
+    </style>
+    <style>
+        .isimsiz {
+            border-color: red !important;
         }
 
         .floatlabel {
@@ -62,18 +67,21 @@
             --background: rgba(0,0,0,.4);
             --color: #D6E685;
         }
-        
+
         .swal2-popup {
             padding: 0 !important;
             margin-top: 35vh !important;
             margin-left: 35vw !important;
         }
-            .swal2-title{
-            font-size:12px;
+
+        .swal2-title {
+            font-size: 12px;
         }
+
         .swal2-container.swal2-backdrop-show, .swal2-container.swal2-noanimation {
             background: var(--background) !important;
         }
+
         .animate__animated.animate__zoomIn {
             --animate-duration: .3s;
         }
@@ -81,6 +89,7 @@
         .animate__animated.animate__zoomOut {
             --animate-duration: .3s;
         }
+
         .animate__animated.animate__fadeIn {
             --animate-duration: .03s;
         }
@@ -93,31 +102,37 @@
             width: 70vw !important;
             height: 92vh !important;
         }
+
         .pop {
             margin-top: var(--y) !important;
             margin-left: var(--x) !important;
-            height:auto;
-            width:125px;
+            height: auto;
+            width: 125px;
         }
+
         .pop3 {
             margin-top: var(--y) !important;
             margin-left: var(--x) !important;
             height: auto;
             width: 125px;
         }
+
         .pop2 {
             margin-top: 35vh !important;
             margin-left: 35vw !important;
         }
-        .swal2-container{
-            display:unset !important;
+
+        .swal2-container {
+            display: unset !important;
         }
-        .swal2-container.swal2-center > .swal2-popup {
-            grid-column: unset;
-            grid-row: unset;
-            align-self: center;
-            justify-self: center;
-        }
+
+            .swal2-container.swal2-center > .swal2-popup {
+                grid-column: unset;
+                grid-row: unset;
+                align-self: center;
+                justify-self: center;
+            }
+
         @@media screen and (max-width: 600px) {
             #github_chart_1 {
                 width: 123vw
@@ -139,8 +154,8 @@
                 width: 126vw !important;
                 height: 124vh !important;
             }
-            
         }
+
         .bg-footer-theme {
             background-color: transparent !important;
             color: #697a8d;
