--- a/NOVA/Views/IsEmri/Index.cshtml
+++ b/NOVA/Views/IsEmri/Index.cshtml
@@ -34,7 +34,11 @@
     <script src="~/lib/pivot/multifact-pivottable.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="https://lipis.github.io/bootstrap-sweetalert/lib/sweet-alert.css">
-
+    <style>
+        body {
+            padding: 0 0 0 3rem !important;
+        }
+    </style>
     <style>
 
         .framebody {
