--- a/NOVA/Views/Satis/DetayliSiparis.cshtml
+++ b/NOVA/Views/Satis/DetayliSiparis.cshtml
@@ -17,6 +17,11 @@
 <link href="https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 <link href="~/assets/vendor/css/cssprogress.min.css" rel="stylesheet" />
 <style>
+    body {
+        padding: 0 0 0 3rem !important;
+    }
+</style>
+<style>
 
     .card-view {
         border-bottom: 1px dashed gray;
