--- a/NOVA/Views/Satis/Index.cshtml
+++ b/NOVA/Views/Satis/Index.cshtml
@@ -11,7 +11,11 @@
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="~/assets/sweetalert/sweetalert.js"></script>
-
+<style>
+    body {
+        padding: 0 0 0 3rem !important;
+    }
+</style>
 <style>
     #table i {
         color: #00AAFF;
@@ -201,7 +205,7 @@
                            data-filter-control="true"
                            data-filter-control-multiple-search="true"
                            data-loading-template="loadingTemplate"
-                           data-height="800"
+                           data-height="780"
                            data-mobile-responsive="true"
                            data-show-footer="false"
                            data-detail-view="false"
