--- a/NOVA/Views/Uretim/AmbarGiris.cshtml
+++ b/NOVA/Views/Uretim/AmbarGiris.cshtml
@@ -10,6 +10,16 @@
     <meta name="viewport" content="width=device-width" />
     <title>AmbarGiris</title>
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <style>
+        body {
+            margin: var(--header-height) 0 0 0;
+            padding: 0 0 0 1rem !important;
+            font-family: var(--body-font);
+            font-size: var(--normal-font-size);
+            background-color: var(--body-color);
+            color: var(--text-color);
+        }
+    </style>
 </head>
 <body>
     <div>
