--- a/NOVA/Views/Uretim/MES.cshtml
+++ b/NOVA/Views/Uretim/MES.cshtml
@@ -1,7 +1,11 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout_MES.cshtml";
 }
-
+<style>
+    body {
+        padding: 0 0 0 3rem !important;
+    }
+</style>
 <div class="header">
     <div class="options">
         <div class="machine-option">
