--- a/NOVA/Views/Home/Index.cshtml
+++ b/NOVA/Views/Home/Index.cshtml
@@ -10,6 +10,12 @@
 <head>
     <link href="~/assets/css/border.css" rel="stylesheet" />
     <style>
+        .bx-menu{
+            display:none !important
+        }
+        body {
+            padding: 0 0 0 3rem !important;
+        }
         .bg-footer-theme {
             background-color: transparent !important;
             color: #697a8d;
@@ -454,77 +460,83 @@
                             ];
                         </script>
                         @{ var onlineusers = ViewBag.OnlineUsers; int a = 0;}
-                        <div class="card col" style="display:unset">
-                            <div class="table-responsive text-nowrap mt-3">
-                                <table class="table table-hover results sorttable centered" id="sortTable">
-                                    <thead class="centered">
-                                        <tr>
+                    @{
+        if (ViewBag.RoleName != "uretim4")
+            {
+                                        <div class="card col" style="display:unset">
+                                            <div class="table-responsive text-nowrap mt-3">
+                                                <table class="table table-hover results sorttable centered" id="sortTable">
+                                                    <thead class="centered">
+                                                        <tr>
 
-                                            <th>
-                                                <script>document.write(monthNames[new Date().getMonth()]);</script> Ayı Kullanım Sıralaması
-                                            </th>
-                                        </tr>
-                                    </thead>
-                                    <tbody class="table-border-bottom-0">
-                                        <tr>
-                                            <td>
-                                                <ul id="ranks" class="list-unstyled users-list m-0 avatar-group d-flex align-items-center">
-                                                </ul>
-                                            </td>
-                                        </tr>
+                                                            <th>
+                                                                <script>document.write(monthNames[new Date().getMonth()]);</script> Ayı Kullanım Sıralaması
+                                                            </th>
+                                                        </tr>
+                                                    </thead>
+                                                    <tbody class="table-border-bottom-0">
+                                                        <tr>
+                                                            <td>
+                                                                <ul id="ranks" class="list-unstyled users-list m-0 avatar-group d-flex align-items-center">
+                                                                </ul>
+                                                            </td>
+                                                        </tr>
 
-                                    </tbody>
-                                </table>
+                                                    </tbody>
+                                                </table>
 
-                            </div>
-                            <div class="table-responsive text-nowrap mt-3">
-                                <table class="table table-hover results sorttable centered" id="sortTable">
-                                    <thead class="centered">
-                                        <tr>
-                                            <th>Çevrimiçi Kullanıcılar(<span id="cevrimicisayi"></span>)</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody class="table-border-bottom-0">
-                                        <tr>
-                                            <td>
-                                                <ul id="onlines" class="list-unstyled users-list m-0 avatar-group d-flex align-items-center">
-                                                </ul>
-                                            </td>
-                                        </tr>
+                                            </div>
+                                            <div class="table-responsive text-nowrap mt-3">
+                                                <table class="table table-hover results sorttable centered" id="sortTable">
+                                                    <thead class="centered">
+                                                        <tr>
+                                                            <th>Çevrimiçi Kullanıcılar(<span id="cevrimicisayi"></span>)</th>
+                                                        </tr>
+                                                    </thead>
+                                                    <tbody class="table-border-bottom-0">
+                                                        <tr>
+                                                            <td>
+                                                                <ul id="onlines" class="list-unstyled users-list m-0 avatar-group d-flex align-items-center">
+                                                                </ul>
+                                                            </td>
+                                                        </tr>
 
-                                    </tbody>
-                                </table>
+                                                    </tbody>
+                                                </table>
 
-                            </div>
-                            <div class="table-responsive text-nowrap">
-                                <table class="table table-hover results sorttable centered" id="sortTable">
-                                    <thead class="centered">
-                                        <tr>
-                                            <th>Çevrimdışı Kullanıcılar(<span id="cevrimdisisayi"></span>)</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody class="table-border-bottom-0">
-                                        @{ var offlineusers = ViewBag.OfflineUsers; int b = 0;}
-                                        <tr>
-                                            <td>
-                                                <ul id="offlines" class="list-unstyled users-list m-0 avatar-group d-flex align-items-center">
-                                                </ul>
-                                            </td>
-
-
-
-                                        </tr>
-
+                                            </div>
+                                            <div class="table-responsive text-nowrap">
+                                                <table class="table table-hover results sorttable centered" id="sortTable">
+                                                    <thead class="centered">
+                                                        <tr>
+                                                            <th>Çevrimdışı Kullanıcılar(<span id="cevrimdisisayi"></span>)</th>
+                                                        </tr>
+                                                    </thead>
+                                                    <tbody class="table-border-bottom-0">
+                                                        @{ var offlineusers = ViewBag.OfflineUsers; int b = 0;}
+                                                        <tr>
+                                                            <td>
+                                                                <ul id="offlines" class="list-unstyled users-list m-0 avatar-group d-flex align-items-center">
+                                                                </ul>
+                                                            </td>
 
 
 
+                                                        </tr>
 
-                                    </tbody>
-                                </table>
 
-                            </div>
 
-                        </div>
+
+
+                                                    </tbody>
+                                                </table>
+
+                                            </div>
+
+                                        </div>
+            }
+                    }
+                        
 
 
                     </div>
