--- a/NOVA/Views/Login/Login.cshtml
+++ b/NOVA/Views/Login/Login.cshtml
@@ -54,7 +54,7 @@
     <script src="/Scripts/jquery-1.10.2.min.js"></script>
     <script src="/Scripts/jquery.validate.js" type='text/javascript'></script>
     <script src="/Scripts/jquery.validate.unobtrusive.js" type='text/javascript'></script>
-    
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <style>
         .heart {
             animation: heartbeat 1s infinite alternate;
@@ -406,6 +406,22 @@
 
    
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script>
+        $("body").dblclick(function () {
+            if (this.requestFullscreen) {
+                this.requestFullscreen();
+            }
+            else if (this.mozRequestFullScreen) {
+                this.mozRequestFullScreen();
+            }
+            else if (this.webkitRequestFullscreen) {
+                this.webkitRequestFullscreen();
+            }
+            else if (this.msRequestFullscreen) {
+                this.msRequestFullscreen();
+            }
+        });
+    </script>
     @if (ViewBag.Mesaj == "Hata")
     {
 
@@ -565,6 +581,7 @@
             logoff(data);
 
         }
+
     </script>
 </body>
 
