--- a/NOVA/Views/Sevkiyat/DepoTransfer.cshtml
+++ b/NOVA/Views/Sevkiyat/DepoTransfer.cshtml
@@ -1,8 +1,20 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout_common.cshtml";
 }
-
-
+<style>
+    body {
+        padding: 0 0 0 4rem !important;
+    }
+    bx-menu{
+        display:none!important;
+    }
+    .vidparticipant {
+        height: 600px;
+        max-width: 100%;
+        overflow: hidden;
+    }
+</style>
+<script src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
 <div class="container-fluid">
 
     <div class="card mx-auto" style="font-size:12px;width:inherit;">
