--- a/NOVA/Views/Sevkiyat/SiparisRaporu.cshtml
+++ b/NOVA/Views/Sevkiyat/SiparisRaporu.cshtml
@@ -17,9 +17,17 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <link href="https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 <link href="~/assets/vendor/css/cssprogress.min.css" rel="stylesheet" />
+<script src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <style>
-
+    body {
+        padding: 0 0 0 2rem !important;
+    }
+    .vidparticipant {
+        height: 600px;
+        max-width: 100%;
+        overflow: hidden;
+    }
     .card-view {
         border-bottom: 1px dashed gray;
         margin-top: 2px;
