--- a/NOVA/Views/Uretim/IsEmri.cshtml
+++ b/NOVA/Views/Uretim/IsEmri.cshtml
@@ -21,6 +21,11 @@
     <link href="~/footable/css/footable.core.bootstrap.css" rel="stylesheet" />
     <link href="~/footable/css/footable.paging.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <style>
+        body {
+            padding: 0 0 0 3rem !important;
+        }
+    </style>
 </head>
 
 <body>
