--- a/NOVA/Views/Uretim/Index.cshtml
+++ b/NOVA/Views/Uretim/Index.cshtml
@@ -337,7 +337,7 @@
                     <label class="btn btn-outline-primary" for="uretilmisbarkodlarrd">ÜRETİLMİŞ BARKODLAR</label>
                 </div>
             </div>
-          
+
         </div>
 
 
@@ -543,9 +543,15 @@
 
 
                 <div class="row" style="min-height:33%;display:none" id="UretilmisBarkodlar">
-                    <div id="UretilmisBarkodlarToolbar">
-                        <select id="uretilmis-barkod-dizayn" class="form-select" style="width:250px"></select>
-                        <button id="uretilmis-barkod-yazdir" class="btn btn-primary" onclick="UretilmisBarkodlariYazdir()" disabled>SEÇİLİ BARKODLARI YAZDIR</button>
+                    <div id="UretilmisBarkodlarToolbar" class="d-flex justify-content-center align-items-center flex-wrap gap-3">
+                        <select id="uretilmis-barkod-dizayn" class="form-select" style="width: 250px;"></select>
+                        <select id="uretilmis-barkod-yazici" class="form-select" style="width: 250px;" disabled></select>
+                        <div class="form-check form-switch h-100 position-relative">
+                            <input class="form-check-input" style="width: 6rem; height: 2rem;" type="checkbox" id="yazdirSwitch" onclick="YazdirSwitch()">
+                            <span id="yazdirLabel" style="position: absolute; left: 0.5rem; top: 0.7rem; font-size: 0.7rem; pointer-events: none; color: white; opacity: 0;">YAZDIR</span>
+                            <span id="yazdirmaLabel" style="position: absolute; left: 2.1rem; top: 0.7rem; font-size: 0.7rem; pointer-events: none;">YAZDIRMA</span>
+                        </div>
+                        <button id="uretilmis-barkod-yazdir" class="btn btn-primary" onclick="UretilmisEtiketleriYazdir()" disabled>OLUŞTUR</button>
                     </div>
                     <div class="table-responsive">
                         <div class="tableClass" style="max-height:680px">
@@ -1717,7 +1723,7 @@
                 $('#UretilmisBarkodlar').show();
 
 
-                UretilmisBarkodlariGetir();
+                UretilmisEtiketleriGetir();
 
                 if (html5QrcodeScanner != null) {
                     html5QrcodeScanner.clear();
@@ -3448,7 +3454,7 @@
         function BarkodModal() {
             $('#BekleyenIsEmirleriTablo').hide();
             $('.iefiltre').hide();
-            
+
             $("#QRModal").modal("show");
             scanner= new Instascan.Scanner({ video: document.getElementById('qr-readerr'), mirror: false, refractoryPeriod: 2000 });
             scanner.addListener('scan', function (decodedText)  {
@@ -3491,9 +3497,9 @@
                         $("#qrClose").prop('disabled', false);
                     })
                 }
-               
+
             })
-           
+
             $('#BekleyenIsEmirleriTable').bootstrapTable('destroy');
             $('#BekleyenIsEmirleriTable').bootstrapTable({ data: [] });
         }
@@ -3959,114 +3965,8 @@
                 html5QrcodeScanner1 = null;
             }
         }
-    </script>
-
-    <!--Üretime Al Son-->
-    <!--Üretilmis Barkodlar-->
-    <script>
-        var UretilmisBarkodlar = [];
-        var SecilenBarkodlar = [];
-        var SecilenBarkodLimiti = 10;
-
-        $(document).ready(() =>
-        {
-            $('#uretilmis-barkod-dizayn').select2({ language: 'tr' });
-        });
-
-        function UretilmisBarkodlariGetir()
-        {
-            $('#uretilmis-barkod-dizayn').html('');
-            $('#uretilmis-barkod-dizayn').append(new Option('Üretim', '0'));
-            $('#uretilmis-barkod-dizayn').append(new Option('Sevkiyat', '1'));
-
-            $.ajax({
-                url: 'http://192.168.2.13:83/api/seri/serirehbertumu',
-                type: 'GET',
-                error: () => { console.log(`Üretilmiş Barkod Getir: Hata oluştu.`); },
-                success: (Response) =>
-                {
-                    UretilmisBarkodlar = Response ?? [];
-
-                    $('#UretilmisBarkodlarTablo').bootstrapTable("destroy");
-                    $('#UretilmisBarkodlarTablo').bootstrapTable({ data: UretilmisBarkodlar });
-                }
-            });
-        }
-
-        function UretilmisBarkodFormatter(value, row, index) {
-
-            if (SecilenBarkodlar.includes(row.SERI_NO))
-            {
-                return `<div onclick="UretilmisBarkodSec('${row.SERI_NO}', this)"><i class="bi bi-check-circle-fill"  style="cursor:pointer;color:#71dd37;font-size:x-large;"></i></div>`;
-            }
-            else
-            {
-                return `<div onclick="UretilmisBarkodSec('${row.SERI_NO}', this)"><i class="bi bi-check-circle"  style="cursor:pointer;color:red;font-size:x-large;"></i></div>`;
-            }
-        }
-
-        function UretilmisBarkodSec(BarkodNo, Button)
-        {
-            var Ikon = Button.getElementsByTagName('i')[0];
-
-            if (SecilenBarkodlar.includes(BarkodNo))
-            {
-                SecilenBarkodlar = SecilenBarkodlar.filter(item => item !== BarkodNo);
-
-                Ikon.style.color = 'red';
-                Ikon.classList.remove("bi-check-circle-fill");
-                Ikon.classList.add("bi-check-circle");
-            }
-            else
-            {
-                if (SecilenBarkodlar.length < SecilenBarkodLimiti)
-                {
-                    SecilenBarkodlar.push(BarkodNo);
-
-                    Ikon.style.color = '#71dd37';
-                    Ikon.classList.add("bi-check-circle-fill");
-                    Ikon.classList.remove("bi-check-circle");
-                }
-                else
-                {
-                    Swal.fire('Uyarı!', `En fazla ${SecilenBarkodLimiti} adet barkod seçebilirsiniz.`, 'warning');
-                }
-            }
-
-            $('#uretilmis-barkod-yazdir').prop('disabled', SecilenBarkodlar.length < 1 ? true : false);
-        }
 
 
-        function UretilmisBarkodlariYazdir()
-        {
-            if (SecilenBarkodlar.length > 0)
-            {
-                $("#progress").show();
-
-                document.body.style.pointerEvents = 'none';
-
-                var EtiketDizayn = parseInt($('#uretilmis-barkod-dizayn').val());
-
-                $.ajax({
-                    url: '@Url.Action("UretilmisBarkodlariYazdir", "Uretim")',
-                    type: 'POST',
-                    data: { "Request": { "BarkodListesi": SecilenBarkodlar.sort(), "EtiketDizayn": EtiketDizayn, "DirektYazdir": false } },
-                    error: () => { console.log(`Üretilmiş Barkod Yazdır: Hata oluştu.`); },
-                    success: (Response) =>
-                    {
-                        console.log(Response);
-                        //EtiketOnizle(Response, SecilenBarkodlar[0]);
-                    }
-                });
-
-                SecilenBarkodlar = [];
-
-                $('#uretilmis-barkod-yazdir').prop('disabled', SecilenBarkodlar.length < 1 ? true : false);
-
-                $('#UretilmisBarkodlarTablo').bootstrapTable('toggleView');
-                $('#UretilmisBarkodlarTablo').bootstrapTable('toggleView');
-            }
-        }
         function yazdirchange() {
             var check = $('#etiketyazdir:checked').val()
             if (check) {
@@ -4078,6 +3978,228 @@
             }
         }
     </script>
+
+    <!--Üretime Al Son-->
+    <!--Üretilmis Barkodlar-->
+    <script>
+    var UretilmisBarkodlar = [];
+    var SecilenBarkodlar = [];
+    var SecilenBarkodLimiti = 10;
+
+    $(document).ready(() =>
+    {
+        $('#uretilmis-barkod-dizayn').select2({ language: 'tr' });
+    });
+
+    function UretilmisEtiketleriGetir()
+    {
+        $('#uretilmis-barkod-dizayn').html('');
+        $('#uretilmis-barkod-dizayn').append(new Option('Üretim', 'Uretim'));
+        $('#uretilmis-barkod-dizayn').append(new Option('Sevkiyat', 'Sevkiyat'));
+
+        $.ajax({
+            url: 'http://192.168.2.13:83/api/seri/serirehbertumu',
+            type: 'GET',
+            error: () => { console.log(`Üretilmiş Barkod Getir: Hata oluştu.`); },
+            success: (Response) =>
+            {
+                UretilmisBarkodlar = Response ?? [];
+
+                $('#UretilmisBarkodlarTablo').bootstrapTable("destroy");
+                $('#UretilmisBarkodlarTablo').bootstrapTable({ data: UretilmisBarkodlar });
+            }
+        });
+
+        $.ajax({
+            url: 'http://192.168.2.13:83/api/printers/list',
+            type: 'GET',
+            error: (e) => { console.error(`Yazıcı Listesi Hata: ${e}`); },
+            success: (response) => {
+                $('#uretilmis-barkod-yazici').select2({ language: "tr", minimumResultsForSearch: 50 });
+
+                $('#uretilmis-barkod-yazici').html('');
+
+                response?.forEach((item) => {
+                    $('#uretilmis-barkod-yazici').append(new Option(item.PRINTER_NAME, item.PRINTER_NAME));
+                });
+            },
+        });
+    }
+
+    function UretilmisBarkodFormatter(value, row, index) {
+
+        if (SecilenBarkodlar.includes(row.SERI_NO))
+        {
+            return `<div onclick="UretilmisBarkodSec('${row.SERI_NO}', this)"><i class="bi bi-check-circle-fill"  style="cursor:pointer;color:#71dd37;font-size:x-large;"></i></div>`;
+        }
+        else
+        {
+            return `<div onclick="UretilmisBarkodSec('${row.SERI_NO}', this)"><i class="bi bi-check-circle"  style="cursor:pointer;color:red;font-size:x-large;"></i></div>`;
+        }
+    }
+
+    function UretilmisBarkodSec(BarkodNo, Button)
+    {
+        var Ikon = Button.getElementsByTagName('i')[0];
+
+        if (SecilenBarkodlar.includes(BarkodNo))
+        {
+            SecilenBarkodlar = SecilenBarkodlar.filter(item => item !== BarkodNo);
+
+            Ikon.style.color = 'red';
+            Ikon.classList.remove("bi-check-circle-fill");
+            Ikon.classList.add("bi-check-circle");
+        }
+        else
+        {
+            if (SecilenBarkodlar.length < SecilenBarkodLimiti)
+            {
+                SecilenBarkodlar.push(BarkodNo);
+
+                Ikon.style.color = '#71dd37';
+                Ikon.classList.add("bi-check-circle-fill");
+                Ikon.classList.remove("bi-check-circle");
+            }
+            else
+            {
+                Swal.fire('Uyarı!', `En fazla ${SecilenBarkodLimiti} adet barkod seçebilirsiniz.`, 'warning');
+            }
+        }
+
+        $('#uretilmis-barkod-yazdir').prop('disabled', SecilenBarkodlar.length < 1 ? true : false);
+    }
+
+
+    function UretilmisEtiketleriYazdir()
+    {
+        if (SecilenBarkodlar.length > 0)
+        {
+            $("#progress").show();
+
+            document.body.style.pointerEvents = 'none';
+
+            var EtiketDizayn = $('#uretilmis-barkod-dizayn').val();
+            var Yazici = $("#uretilmis-barkod-yazici").val();
+            var DirektYazdir = $('#yazdirSwitch').is(':checked');
+
+            var Data = { "BarkodListesi": SecilenBarkodlar.sort(), "EtiketDizayn": EtiketDizayn, "DirektYazdir": DirektYazdir, "Yazici": Yazici };
+
+            $.ajax({
+                url: '@Url.Action("UretilmisEtiketleriYazdir", "Uretim")',
+                type: 'POST',
+                data: Data,
+                error: () => { console.log(`Üretilmiş Barkod Yazdır: Hata oluştu.`); },
+                success: (Response) =>
+                {
+                    var base64regex = /^([0-9a-zA-Z+/]{4})*(([0-9a-zA-Z+/]{2}==)|([0-9a-zA-Z+/]{3}=))?$/;
+
+                    if (base64regex.test(Response))
+                    {
+                        UretilmisEtiketOnizle(Response);
+                    }
+                    else
+                    {
+                        console.log(Response);
+                        document.body.style.pointerEvents = 'auto';
+                        $("#progress").hide();
+                    }
+                }
+            });
+
+            SecilenBarkodlar = [];
+
+            $('#uretilmis-barkod-yazdir').prop('disabled', SecilenBarkodlar.length < 1 ? true : false);
+
+            $('#UretilmisBarkodlarTablo').bootstrapTable('toggleView');
+            $('#UretilmisBarkodlarTablo').bootstrapTable('toggleView');
+        }
+    }
+
+    function UretilmisEtiketOnizle(data)
+    {
+        if (/(android|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine|fennec|hiptop|iemobile|ip(hone|od)|ipad|iris|kindle|Android|Silk|lge |maemo|midp|mmp|netfront|opera m(ob|in)i|palm( os)?|phone|p(ixi|re)\/|plucker|pocket|psp|series(4|6)0|symbian|treo|up\.(browser|link)|vodafone|wap|windows (ce|phone)|xda|xiino/i.test(navigator.userAgent)
+            || /1207|6310|6590|3gso|4thp|50[1-6]i|770s|802s|a wa|abac|ac(er|oo|s\-)|ai(ko|rn)|al(av|ca|co)|amoi|an(ex|ny|yw)|aptu|ar(ch|go)|as(te|us)|attw|au(di|\-m|r |s )|avan|be(ck|ll|nq)|bi(lb|rd)|bl(ac|az)|br(e|v)w|bumb|bw\-(n|u)|c55\/|capi|ccwa|cdm\-|cell|chtm|cldc|cmd\-|co(mp|nd)|craw|da(it|ll|ng)|dbte|dc\-s|devi|dica|dmob|do(c|p)o|ds(12|\-d)|el(49|ai)|em(l2|ul)|er(ic|k0)|esl8|ez([4-7]0|os|wa|ze)|fetc|fly(\-|_)|g1 u|g560|gene|gf\-5|g\-mo|go(\.w|od)|gr(ad|un)|haie|hcit|hd\-(m|p|t)|hei\-|hi(pt|ta)|hp( i|ip)|hs\-c|ht(c(\-| |_|a|g|p|s|t)|tp)|hu(aw|tc)|i\-(20|go|ma)|i230|iac( |\-|\/)|ibro|idea|ig01|ikom|im1k|inno|ipaq|iris|ja(t|v)a|jbro|jemu|jigs|kddi|keji|kgt( |\/)|klon|kpt |kwc\-|kyo(c|k)|le(no|xi)|lg( g|\/(k|l|u)|50|54|\-[a-w])|libw|lynx|m1\-w|m3ga|m50\/|ma(te|ui|xo)|mc(01|21|ca)|m\-cr|me(rc|ri)|mi(o8|oa|ts)|mmef|mo(01|02|bi|de|do|t(\-| |o|v)|zz)|mt(50|p1|v )|mwbp|mywa|n10[0-2]|n20[2-3]|n30(0|2)|n50(0|2|5)|n7(0(0|1)|10)|ne((c|m)\-|on|tf|wf|wg|wt)|nok(6|i)|nzph|o2im|op(ti|wv)|oran|owg1|p800|pan(a|d|t)|pdxg|pg(13|\-([1-8]|c))|phil|pire|pl(ay|uc)|pn\-2|po(ck|rt|se)|prox|psio|pt\-g|qa\-a|qc(07|12|21|32|60|\-[2-7]|i\-)|qtek|r380|r600|raks|rim9|ro(ve|zo)|s55\/|sa(ge|ma|mm|ms|ny|va)|sc(01|h\-|oo|p\-)|sdk\/|se(c(\-|0|1)|47|mc|nd|ri)|sgh\-|shar|sie(\-|m)|sk\-0|sl(45|id)|sm(al|ar|b3|it|t5)|so(ft|ny)|sp(01|h\-|v\-|v )|sy(01|mb)|t2(18|50)|t6(00|10|18)|ta(gt|lk)|tcl\-|tdg\-|tel(i|m)|tim\-|t\-mo|to(pl|sh)|ts(70|m\-|m3|m5)|tx\-9|up(\.b|g1|si)|utst|v400|v750|veri|vi(rg|te)|vk(40|5[0-3]|\-v)|vm40|voda|vulc|vx(52|53|60|61|70|80|81|83|85|98)|w3c(\-| )|webc|whit|wi(g |nc|nw)|wmlb|wonu|x700|yas\-|your|zeto|zte\-/i.test(navigator.userAgent.substr(0, 4)))
+        {
+            const linkSource = `data:application/pdf;base64,${data}`;
+            const downloadLink = document.createElement("a");
+            const fileName = `${BarkodNo}-${Math.floor(Date.now() / 1000)}.pdf`;
+            downloadLink.href = linkSource;
+            downloadLink.download = fileName;
+            downloadLink.click();
+            window.open(`content:///storage/emulated/0/Download/${fileName}`, '_blank');
+            /*w = window.open('http://192.168.2.13:85/DesignOutput/Uretim/UretimSonuKaydi/'+data); w.print();*/
+        }
+        else
+        {
+            printJS({
+                printable: data,
+                type: 'pdf',
+                base64: true
+            });
+        }
+
+        document.body.style.pointerEvents = 'auto';
+        $("#progress").hide();
+    }
+
+    function YazdirSwitch() {
+        Yazdir = $('#yazdirSwitch').is(':checked');
+
+        $("#uretilmis-barkod-yazici").prop("disabled", !Yazdir);
+
+        if (!Yazdir) {
+            $('#yazdirLabel').removeClass('fadeInAnimasyon');
+            $('#yazdirmaLabel').removeClass('fadeOutAnimasyon');
+
+            $('#yazdirLabel').addClass('fadeOutAnimasyon');
+            $('#yazdirmaLabel').addClass('fadeInAnimasyon');
+        }
+        else {
+            $('#yazdirLabel').removeClass('fadeOutAnimasyon');
+            $('#yazdirmaLabel').removeClass('fadeInAnimasyon');
+
+            $('#yazdirLabel').addClass('fadeInAnimasyon');
+            $('#yazdirmaLabel').addClass('fadeOutAnimasyon');
+        }
+    }
+    </script>
+
+    <style>
+        @@-webkit-keyframes FadeIn {
+            from {
+                opacity: 0;
+            }
+
+            to {
+                opacity: 1;
+            }
+        }
+
+        @@-webkit-keyframes FadeOut {
+            from {
+                opacity: 1;
+            }
+
+            to {
+                opacity: 0;
+            }
+        }
+
+        .fadeInAnimasyon {
+            animation: FadeIn 0.2s ease 0s 1 normal forwards;
+        }
+
+        .fadeOutAnimasyon {
+            animation: FadeOut 0.2s ease 0s 1 normal forwards;
+        }
+
+        @@media (max-width: 562px) {
+            #yazdirmaLabel, #yazdirLabel {
+                top: 30% !important;
+            }
+        }
+    </style>
+
     <!--Üretilmis Barkodlar Son-->
 </body>
 
