Sevkiyat, üretim barkodlar düzenlendi.

--- a/NOVA/Views/Sevkiyat/SevkMalKabul.cshtml
+++ b/NOVA/Views/Sevkiyat/SevkMalKabul.cshtml
@@ -511,7 +511,7 @@
         var KopyaVerisi = "";
 
         for (var i = 0; i < Filtered.length; i++) {
-            KopyaVerisi += `${Filtered[i].SERI_NO}	${GenislikKalinlikFormat(Filtered[i].ACIK1)}	${GenislikKalinlikFormat(Filtered[i].ACIK2)}	${Filtered[i].ACIK3}	${MiktarFormatla(Filtered[i].MIKTAR1)}	${MiktarFormatla(Filtered[i].MIKTAR2)}	${Filtered[i].SERI_NO_3}	${Filtered[i].SERI_NO_4}	${Filtered[i].ACIKLAMA_4}	${Filtered[i].ACIKLAMA_5}\n`;
+            KopyaVerisi += `${Filtered[i].SERI_NO}	${GenislikFormat(Filtered[i].ACIK2)}	${Filtered[i].SERI_NO_3}	${Filtered[i].SERI_NO_4}	${MiktarFormatla(Filtered[i].MIKTAR1)}	${MiktarFormatla(Filtered[i].MIKTAR2)}	${GenislikKalinlikFormat(Filtered[i].ACIK1)}	${Filtered[i].ACIK3}\n`;
         }
 
         try {
