--- a/NOVA/Views/Sevkiyat/SevkMalKabulPartials/SevMalKabulSeriNo_Modal.cshtml
+++ b/NOVA/Views/Sevkiyat/SevkMalKabulPartials/SevMalKabulSeriNo_Modal.cshtml
@@ -97,9 +97,9 @@
     async function SeriNoModalKopyala() {
         if (SeriNoModalList.length > 0) {
             var KopyaVerisi = "";
-
+            //SERI_NO ACIK2 SERI_NO_3 SERI_NO_4 MIKTAR1 MIKTAR2 ACIK1 ACIK3
             for (var i = 0; i < SeriNoModalList.length; i++) {
-                KopyaVerisi += `${SeriNoModalList[i].SERI_NO}	${GenislikKalinlikFormat(SeriNoModalList[i].ACIK1)}	${GenislikKalinlikFormat(SeriNoModalList[i].ACIK2)}	${SeriNoModalList[i].ACIK3}	${MiktarFormatla(SeriNoModalList[i].MIKTAR1)}	${MiktarFormatla(SeriNoModalList[i].MIKTAR2)}	${SeriNoModalList[i].SERI_NO_3}	${SeriNoModalList[i].SERI_NO_4}	${SeriNoModalList[i].ACIKLAMA_4}	${SeriNoModalList[i].ACIKLAMA_5}\n`;
+                KopyaVerisi += `${SeriNoModalList[i].SERI_NO}	${GenislikFormat(SeriNoModalList[i].ACIK2)}	${SeriNoModalList[i].SERI_NO_3}	${SeriNoModalList[i].SERI_NO_4}	${MiktarFormatla(SeriNoModalList[i].MIKTAR1)}	${MiktarFormatla(SeriNoModalList[i].MIKTAR2)}	${GenislikKalinlikFormat(SeriNoModalList[i].ACIK1)}	${SeriNoModalList[i].ACIK3}\n`;
             }
 
             try {
@@ -173,6 +173,10 @@
 
     function GenislikKalinlikFormat(value)
     {
-        return value.replace(".", ",");
+        return parseFloat(value).toFixed(2).toString().replace(".", ",");
+    }
+
+    function GenislikFormat(value) {
+        return parseInt(value);
     }
 </script>
