--- a/NOVA/Views/Shared/_Layout_MES.cshtml
+++ b/NOVA/Views/Shared/_Layout_MES.cshtml
@@ -121,6 +121,7 @@
             padding-bottom: 2.5rem;
             background-color: var(--empty-bg-color);
             color: var(--empty-text-color);
+            padding: 0 !important;
         }
 
         .header {
