--- a/NOVA/Views/Shared/_Layout_isemri.cshtml
+++ b/NOVA/Views/Shared/_Layout_isemri.cshtml
@@ -48,7 +48,7 @@
 <body class="framebody">
 
 
-    <div class="layout-wrapper layout-content-navbar">
+    <div class="layout-wrapper layout-content-navbar" style="box-sizing: border-box !important; padding-right: 2rem !important; width:100% !important;">
         <div class="layout-container">
             <!-- Menu -->
 
@@ -60,68 +60,7 @@
             </div>
 
             <div class="layout-page" style="padding-left:0 !important">
-                <div class="container-fluid isimbar">
-                    <div class="row">
-                        <div class="col d-none" style="font-size:14px">
-                            <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-                                <label class="form-check-label" for="inlineRadio1">Dilme - Trapez</label>
-                            </div>
-                            <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2" checked>
-                                <label class="form-check-label" for="inlineRadio2">Diğer</label>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <a class="nav-link dropdown-toggle hide-arrow nav-align-right" href="javascript:void(0);" data-bs-toggle="dropdown">
-                                <div class="avatar avatar-online">
-                                    @{
-                                        string s = Request.Cookies["Id"].Value + ".png?" + DateTime.Now.Ticks.ToString();
-                                    }
-                                    <object data="/assets/img/avatars/@s" type="image/png" class="w-px-40 h-auto rounded-circle">
-                                        <img src="/assets/img/avatars/7.png" class="w-px-40 h-auto rounded-circle">
-                                    </object>
-                                </div>
-                            </a>
-                            <ul class="dropdown-menu dropdown-menu-end">
-                                <li>
-                                    <a class="dropdown-item" href='@Url.Action("Index","Profil")'>
-                                        <div class="d-flex">
-                                            <div class="flex-shrink-0 me-3">
-                                                <div class="avatar avatar-online">
-                                                    <object data="/assets/img/avatars/@s" type="image/png" class="w-px-40 h-auto rounded-circle">
-                                                        <img src="/assets/img/avatars/7.png" class="w-px-40 h-auto rounded-circle">
-                                                    </object>
-                                                </div>
-                                            </div>
-                                            <div class="flex-grow-1">
-                                                @if (@Request.Cookies["Name"] != null)
-                                                {
-                                                    <span class="fw-semibold d-block">@Request.Cookies["Name"].Value</span>
-                                                    <small class="text-muted">Yetki: @Request.Cookies["RoleName"].Value</small>
-                                                }
-                                                else
-                                                {
-                                                    <span class="fw-semibold d-block">Test</span>
-                                                    <small class="text-muted">Yetki: Test</small>
-                                                }
-
-                                            </div>
-                                        </div>
-                                    </a>
-                                </li>
-
-                                <li>
-                                    <a href="javascript:void(0);" class="dropdown-item" data-bs-toggle="modal"
-                                       data-bs-target="#cikis">
-                                        <i class="bx bx-power-off me-2"></i>
-                                        <span class="align-middle">Oturumu Kapat</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
+                
 
                 <div id="cikis" class="modal fade" tabindex="-1" role="dialog">
                     <div class="modal-dialog modal-dialog-centered" role="document">
