--- a/NOVA/Views/Uretim/Index.cshtml
+++ b/NOVA/Views/Uretim/Index.cshtml
@@ -23,7 +23,7 @@
 
     <style>
         body {
-            padding: 0 0 0 8rem !important;
+            padding: 0 0 0 5rem !important;
         }
         .thead {
             position: sticky !important;
@@ -312,12 +312,30 @@
             display: none !important;
         }
     </style>
+    <script>
+        function ShowProgress()
+        {
+            document.body.style.overflow = 'hidden';
+            document.activeElement.blur();
+            $('#nova-overlay').fadeIn('fast').css('display', 'flex');
+        }
+        function HideProgress()
+        {
+            document.body.style.overflow = 'auto';
+            $('#nova-overlay').fadeOut('slow');
+        }
+    </script>
 </head>
 <body style="overflow-x:hidden;">
     <div class="centercontent" id="content" style="display:unset">
         <div class="heart"><img id="progress" src="~/images/novasaydam.png" style="max-width:15vw" /></div>
     </div>
-    <div class="container-fluid">
+
+    <div id="nova-overlay" style="position: absolute; background: #00000080; left: 0; right: 0; bottom: 0; top: 0; z-index: 9999999;display:none;justify-content:center;align-items:center;">
+        <div class="heart"><img id="progress" src="~/images/novasaydam.png" width="400" /></div>
+    </div>
+
+    <div class="container-fluid p-0">
         <div class="row d-flex justify-content-center align-items-center gap-2">
             <div class="col-sm-auto d-flex justify-content-center">
                 <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
@@ -328,10 +346,10 @@
                     <label class="btn btn-outline-primary" for="uretimkaydird">ÜRETİM KAYDI</label>
 
                     <input type="radio" class="btn-check" name="uretim-islem" id="bekleyenisemirlerird" onclick="change(parseInt(this.value))" value="2" autocomplete="off">
-                    <label class="btn btn-outline-primary" for="bekleyenisemirlerird">BEKLEYEN İŞ EMİRLERİ</label>
+                    <label class="btn btn-outline-primary" for="bekleyenisemirlerird">İŞ EMİRLERİ</label>
 
                     <input type="radio" class="btn-check" name="uretim-islem" id="uretimegirenlerrd" onclick="change(parseInt(this.value))" value="3" autocomplete="off">
-                    <label class="btn btn-outline-primary" for="uretimegirenlerrd">ÜRETİME GİRENLER</label>
+                    <label class="btn btn-outline-primary" for="uretimegirenlerrd">ÜRETİME ALINANLAR</label>
 
                     <input type="radio" class="btn-check" name="uretim-islem" id="uretilmisbarkodlarrd" onclick="change(parseInt(this.value))" value="4" autocomplete="off">
                     <label class="btn btn-outline-primary" for="uretilmisbarkodlarrd">ÜRETİLMİŞ BARKODLAR</label>
@@ -340,15 +358,14 @@
 
         </div>
 
-
         <div class="row" style="min-height:100%;overflow-y:auto;">
             <div class="col">
 
                 <div class="row mt-2" style="max-width:100vw">
-                    <div class="col-11 d-flex justify-content-center align-items-center makineler">
-                        <div id="UretimKaydiMakine" style="max-width: 65vw; width: 65vw; display: none;"> </div>
-                        <div id="BekleyenIsEmirleriMakine" style="max-width: 65vw; width: 65vw; display: none;"> </div>
-                        <div id="UretimeGirenlerMakine" style="max-width: 65vw; width: 65vw; display: none;"> </div>
+                    <div class="col-11 d-flex justify-content-center align-items-center makineler w-100 p-1">
+                        <div id="UretimKaydiMakine" style="width:100vw; display: none;"> </div>
+                        <div id="BekleyenIsEmirleriMakine" style="width: 100vw; display: none;"> </div>
+                        <div id="UretimeGirenlerMakine" style="width: 100vw; display: none;"> </div>
                     </div>
                 </div>
                 <div class="row  mt-2">
@@ -377,7 +394,7 @@
 
                     </div>
                 </div>
-                <div class="row my-3" id="makmobile2" style="max-width:100vw">
+                <div class="row my-3" id="makmobile2" style="max-width:100vw;">
                     <div class="col">
 
                         <div class="btn-group" role="group" aria-label="Basic radio toggle button group" id="makineler3" style="display:none">
@@ -385,12 +402,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="row" style="min-height:33%;display:none" id="tablo">
+                <div class="row" style="min-height: 33%; display: none; min-height: 33%; padding-left: 0.75rem; overflow: hidden; " id="tablo">
                     <div class="col" style=" overflow-y: auto; border: 1px solid #d9dee3; padding: 13px; display: grid; grid-template-columns: repeat(auto-fill,minmax(295px, 0)); grid-template-rows: repeat(auto-fill, minmax(145px, 0)); grid-gap: 3px;" id="stokadlari">
 
                     </div>
 
-                    <div class="col-sm-auto">
+                    <div class="col-sm-auto" style="padding-right: 0;">
                         <div class="tableClass" style="max-height:680px">
                             <table id="UretimListeTable"
                                    class="table"
@@ -1204,6 +1221,7 @@
 
                 $('#UretimeGirenlerTable').on('reorder-row.bs.table', (Data, DroppedData, OldPosition) => {
 
+
                     var DraggedIndex = DroppedData.findIndex((item) => item.SERI_NO === OldPosition.SERI_NO);
 
                     var Machine = $('input[name="makine-ie"]:checked').val();
@@ -1317,7 +1335,7 @@
         }
 
         #UretimListeTable {
-            width: 170px;
+            width: 145px;
         }
 
             #UretimListeTable tbody {
@@ -1370,7 +1388,6 @@
         //});
         var html5QrcodeScanner = null;
         $(document).ready(function () {
-
             $("#filter").select2(
                 {
                     "language": {
@@ -4088,14 +4105,14 @@
                 url: '@Url.Action("UretilmisEtiketleriYazdir", "Uretim")',
                 type: 'POST',
                 data: Data,
-                error: () => { console.log(`Üretilmiş Barkod Yazdır: Hata oluştu.`); },
+                error: (e) => {console.log(`Üretilmiş Barkod Yazdır: Hata oluştu.`); },
                 success: (Response) =>
                 {
                     var base64regex = /^([0-9a-zA-Z+/]{4})*(([0-9a-zA-Z+/]{2}==)|([0-9a-zA-Z+/]{3}=))?$/;
 
                     if (base64regex.test(Response))
                     {
-                        UretilmisEtiketOnizle(Response);
+                        UretilmisEtiketOnizle(Response, SecilenBarkodlar[0]);
                     }
                     else
                     {
@@ -4115,7 +4132,7 @@
         }
     }
 
-    function UretilmisEtiketOnizle(data)
+    function UretilmisEtiketOnizle(data, BarkodNo)
     {
         if (/(android|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine|fennec|hiptop|iemobile|ip(hone|od)|ipad|iris|kindle|Android|Silk|lge |maemo|midp|mmp|netfront|opera m(ob|in)i|palm( os)?|phone|p(ixi|re)\/|plucker|pocket|psp|series(4|6)0|symbian|treo|up\.(browser|link)|vodafone|wap|windows (ce|phone)|xda|xiino/i.test(navigator.userAgent)
             || /1207|6310|6590|3gso|4thp|50[1-6]i|770s|802s|a wa|abac|ac(er|oo|s\-)|ai(ko|rn)|al(av|ca|co)|amoi|an(ex|ny|yw)|aptu|ar(ch|go)|as(te|us)|attw|au(di|\-m|r |s )|avan|be(ck|ll|nq)|bi(lb|rd)|bl(ac|az)|br(e|v)w|bumb|bw\-(n|u)|c55\/|capi|ccwa|cdm\-|cell|chtm|cldc|cmd\-|co(mp|nd)|craw|da(it|ll|ng)|dbte|dc\-s|devi|dica|dmob|do(c|p)o|ds(12|\-d)|el(49|ai)|em(l2|ul)|er(ic|k0)|esl8|ez([4-7]0|os|wa|ze)|fetc|fly(\-|_)|g1 u|g560|gene|gf\-5|g\-mo|go(\.w|od)|gr(ad|un)|haie|hcit|hd\-(m|p|t)|hei\-|hi(pt|ta)|hp( i|ip)|hs\-c|ht(c(\-| |_|a|g|p|s|t)|tp)|hu(aw|tc)|i\-(20|go|ma)|i230|iac( |\-|\/)|ibro|idea|ig01|ikom|im1k|inno|ipaq|iris|ja(t|v)a|jbro|jemu|jigs|kddi|keji|kgt( |\/)|klon|kpt |kwc\-|kyo(c|k)|le(no|xi)|lg( g|\/(k|l|u)|50|54|\-[a-w])|libw|lynx|m1\-w|m3ga|m50\/|ma(te|ui|xo)|mc(01|21|ca)|m\-cr|me(rc|ri)|mi(o8|oa|ts)|mmef|mo(01|02|bi|de|do|t(\-| |o|v)|zz)|mt(50|p1|v )|mwbp|mywa|n10[0-2]|n20[2-3]|n30(0|2)|n50(0|2|5)|n7(0(0|1)|10)|ne((c|m)\-|on|tf|wf|wg|wt)|nok(6|i)|nzph|o2im|op(ti|wv)|oran|owg1|p800|pan(a|d|t)|pdxg|pg(13|\-([1-8]|c))|phil|pire|pl(ay|uc)|pn\-2|po(ck|rt|se)|prox|psio|pt\-g|qa\-a|qc(07|12|21|32|60|\-[2-7]|i\-)|qtek|r380|r600|raks|rim9|ro(ve|zo)|s55\/|sa(ge|ma|mm|ms|ny|va)|sc(01|h\-|oo|p\-)|sdk\/|se(c(\-|0|1)|47|mc|nd|ri)|sgh\-|shar|sie(\-|m)|sk\-0|sl(45|id)|sm(al|ar|b3|it|t5)|so(ft|ny)|sp(01|h\-|v\-|v )|sy(01|mb)|t2(18|50)|t6(00|10|18)|ta(gt|lk)|tcl\-|tdg\-|tel(i|m)|tim\-|t\-mo|to(pl|sh)|ts(70|m\-|m3|m5)|tx\-9|up(\.b|g1|si)|utst|v400|v750|veri|vi(rg|te)|vk(40|5[0-3]|\-v)|vm40|voda|vulc|vx(52|53|60|61|70|80|81|83|85|98)|w3c(\-| )|webc|whit|wi(g |nc|nw)|wmlb|wonu|x700|yas\-|your|zeto|zte\-/i.test(navigator.userAgent.substr(0, 4)))
@@ -4128,6 +4145,7 @@
             downloadLink.click();
             window.open(`content:///storage/emulated/0/Download/${fileName}`, '_blank');
             /*w = window.open('http://192.168.2.13:85/DesignOutput/Uretim/UretimSonuKaydi/'+data); w.print();*/
+
         }
         else
         {
@@ -4199,8 +4217,97 @@
             }
         }
     </style>
-
     <!--Üretilmis Barkodlar Son-->
+    <!-- Deneysel -->
+    <button class="btn btn-primary" onclick="Scan()">Scan</button>
+    <div id="qr-scanner-area">
+        <video id="qr-scanner"></video>
+        <div id="qr-controls">
+            <select id="qr-camera-select">
+                <option>Test</option>
+                <option>Test2</option>
+            </select>
+            <button id="qr-scanner-exit" onclick="Close()">X</button>
+        </div>
+    </div>
+
+
+    <style>
+        #qr-scanner-area {
+            display: none;
+            position: relative;
+            width: 100%;
+            height: 100%;
+        }
+
+        #qr-scanner {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        #qr-controls {
+            position: absolute;
+            top: 0;
+            right: 0;
+            left: 0;
+            bottom: 0;
+            display: flex;
+            justify-content: space-between;
+            align-items: start;
+            padding: 1rem;
+        }
+    </style>
+
+    <script>
+        var Scanner;
+
+        function Scan() {
+            Scanner = new Instascan.Scanner({ video: document.getElementById('qr-scanner') });
+
+            Scanner.addListener('scan', function (content) {
+                alert(content);
+            });
+
+            let Cameras = [];
+
+            Instascan.Camera.getCameras()
+                .then(function (cameras, image) {
+                    Scanner.start(cameras[0])
+                        .then(() => {
+                            SetFullscreen(document.getElementById('qr-scanner-area'));
+                            document.getElementById('qr-scanner-area').style.display = "block";
+                        });
+
+                })
+                .catch((e) => {
+                    console.error(e)
+                });
+        }
+
+        function Close() {
+            Scanner
+                .stop()
+                .then(() => {
+                    document.getElementById('qr-scanner-area').style.display = "none";
+                    document.exitFullscreen();
+                });
+        }
+
+        function SetFullscreen(Item) {
+            if (Item.requestFullscreen) {
+                Item.requestFullscreen();
+            }
+            else if (Item.webkitRequestFullscreen) {
+                Item.webkitRequestFullscreen();
+            }
+            else if (Item.msRequestFullscreen) {
+                Item.msRequestFullscreen();
+            }
+        }
+    </script>
+
+    <!-- Deneysel Son-->
 </body>
 
 </html>
